fix: ajust to only one column and row gap

--- a/src/components/experience/styles.module.scss
+++ b/src/components/experience/styles.module.scss
@@ -16,7 +16,9 @@
   }
 
   .experiencesContainer {
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-row-gap: 0.5rem;
 
     .experience {
       display: grid;
